fix know toggle text verticle align: don't know how this works.

--- a/src/content_scripts/style.css
+++ b/src/content_scripts/style.css
@@ -54,6 +54,7 @@
 #metwords-tip .known-switch {
 	margin-bottom: 0px;
 	margin-left: auto;
+	line-height: 1.4em;
 }
 
 #metwords-tip .phonetics {
